@@ -3,6 +3,7 @@ Revision history for perl distribution Mojo-Redis
 3.02 Not Released
  - Add Mojo::Redis::Cache->memomize_p()
  - Add examples/twitter.pl
+ - Add documentation for events #2
 
 3.01 2018-06-28T15:22:47+0900
  - Add Mojo::Redis::Cache
